--- a/libraries/caching.html
+++ b/libraries/caching.html
@@ -58,15 +58,15 @@ Caching Driver
 
 <h1>Caching Driver</h1>
 
-<p>CodeIgniter features wrappers around some of the most popular forms of fast and dynamic caching.  All but file-based caching require specific server requirements, and a Fatal Exception will be thrown if server requirements are not met.</p>
+<p>CI 以包裝一些受歡迎並且快速又動態的快取為特色，幾乎所有 file-based 的快取都會需要特定的伺服器，並且當出現沒有遇過的伺服器需求時，會發出錯誤例外</p>
 
-<h2>Table of Contents</h2>
+<h2>資料表格</h2>
 <ul>
-	<li><a href="#example_usage" title="Example Usage">Example Usage</a></li>
-	<li><a href="#function_reference" title="Function Reference">Function Reference</a></li>
+	<li><a href="#example_usage" title="Example Usage">使用範例</a></li>
+	<li><a href="#function_reference" title="Function Reference">函式參考</a></li>
 </ul>
 
-<h3>Available Drivers</h3>
+<h3>允許使用的 Driver</h3>
 <ul>
 	<li><a href="#apc" title="APC Cache">Alternative PHP Cache (APC) Caching</a></li>
 	<li><a href="#file" title="File Caching">File-based Caching</a></li>
@@ -74,9 +74,9 @@ Caching Driver
 	<li><a href="#dummy" title="Dummy Caching">Dummy Cache</a></li>
 </ul>
 
-<h2 id="example_usage">Example Usage</h2>
+<h2 id="example_usage">使用範例</h2>
 
-<p>The following example will load the cache driver, specify <a href="#apc" title="APC">APC</a> as the driver to use, and fall back to file-based caching if APC is not available in the hosting environment.</p>
+<p>底下的範例是使用 <a href="#apc" title="APC">APC</a> 快取，假如它無法使用則會退回 file-based 快取</p>
 
 <code>
 $this->load->driver('cache', array('adapter' => 'apc', 'backup' => 'file'));<br />
@@ -93,11 +93,11 @@ if ( ! $foo = $this->cache->get('foo'))<br />
 echo $foo;
 </code>
 
-<h1 id="function_reference">Function Reference</h1>
+<h1 id="function_reference">函數參考</h1>
 
 <h2>is_supported(<var>driver</var>['string'])</h2>
 
-<p>This function is automatically called when accessing drivers via <samp>$this->cache->get()</samp>.  However, if the individual drivers are used, make sure to call this function to ensure the driver is supported in the hosting environment.</p>
+<p>當透過 <samp>$this->cache->get()</samp> 使用 driver 時，此函數會被自動呼叫，假如是獨立使用 driver 時，請務必呼叫此函數來確定 driver 在此環境是否支援</p>
 
 <code>
 if ($this->cache->apc->is_supported())<br />
@@ -111,35 +111,34 @@ if ($this->cache->apc->is_supported())<br />
 
 <h2>get(<var>id</var>['string'])</h2>
 
-<p>This function will attempt to fetch an item from the cache store.  If the item does not exist, the function will return <samp>FALSE</samp>.</p>
+<p>此函數將會從快取中取得一個項目，此項目不存在則會回傳 <samp>FALSE</samp></p>
 <code>$foo = $this->cache->get('my_cached_item');</code>
 
 <h2>save(<var>id</var>['string'], <var>data</var>['mixed'], <var>ttl</var>['int'])</h2>
 
-<p>This function will save an item to the cache store.  If saving fails, the function will return <samp>FALSE</samp>.</p>
-<p>The optional third parameter (Time To Live) defaults to 60 seconds.</p>
+<p>此函數將會儲存一個項目到快取中，儲存失敗則會回傳 <samp>FALSE</samp>，第三個參數(存活時間)，預設為60秒</p>
 <code>$this->cache->save('cache_item_id', 'data_to_cache');</code>
 
 <h2>delete(<var>id</var>['string'])</h2>
 
-<p>This function will delete a specific item from the cache store.  If item deletion fails, the function will return <samp>FALSE</samp>.</p>
+<p>此函數將會刪除一個指定的項目，刪除失敗則會回傳 <samp>FALSE</samp></p>
 <code>$this->cache->delete('cache_item_id');</code>
 
 <h2>clean()</h2>
 
-<p>This function will 'clean' the entire cache.  If the deletion of the cache files fails, the function will return <samp>FALSE</samp>.</p>
+<p>此函數將會清除快取，清除失敗則會回傳 <samp>FALSE</samp></p>
 
 <code>$this->cache->clean();</code>
 
 <h2>cache_info()</h2>
 
-<p>This function will return information on the entire cache.</p>
+<p>此函數將會回傳所有的快取資訊</p>
 
 <code>var_dump($this->cache->cache_info());</code>
 
 <h2>get_metadata(<var>id</var>['string'])</h2>
 
-<p>This function will return detailed information on a specific item in the cache.</p>
+<p>此函數將會從快取中回傳指定項目的詳細資訊</p>
 
 <code>var_dump($this->cache->get_metadata('my_cached_item'));</code>
 
@@ -147,32 +146,32 @@ if ($this->cache->apc->is_supported())<br />
 
 <h2 id="apc">Alternative PHP Cache (APC) Caching</h2>
 
-<p>All of the functions listed above can be accessed without passing a specific adapter to the driver loader as follows:</p>
+<p>以上所列出的函數都是能夠不經由 adapter 就能直接執行:</p>
 <code>$this->load->driver('cache');<br />
 	$this->cache->apc->save('foo', 'bar', 10);</code>
-<p>For more information on APC, please see <a href="http://php.net/apc">http://php.net/apc</a></p>
+<p>想知道更多的 APC 資訊，請上 <a href="http://php.net/apc">http://php.net/apc</a></p>
 
 <h2 id="file">File-based Caching</h2>
 
-<p>Unlike caching from the Output Class, the driver file-based caching allows for pieces of view files to be cached.  Use this with care, and make sure to benchmark your application, as a point can come where disk I/O will negate positive gains by caching.</p>
+<p>不像其它方式，file-based 的快取能允許快取小量的 view 資訊，但請注意，由於磁碟 I/O 的關係，可能會減少快取的效益</p>
 
-<p>All of the functions listed above can be accessed without passing a specific adapter to the driver loader as follows:</p>
+<p>以上所列出的函數都是能夠不經由 adapter 就能直接執行:</p>
 <code>$this->load->driver('cache');<br />
 	$this->cache->file->save('foo', 'bar', 10);</code>
 
 <h2 id="memcached">Memcached Caching</h2>
 
-<p>Multiple Memcached servers can be specified in the memcached.php configuration file, located in the <samp>application/config/</samp> directory.
+<p>要啟動多個 Memcached Caching 可以在 memcached.php 設定，檔案位置: <samp>application/config/</samp>
 
-<p>All of the functions listed above can be accessed without passing a specific adapter to the driver loader as follows:</p>
+<p>以上所列出的函數都是能夠不經由 adapter 就能直接執行:</p>
 <code>$this->load->driver('cache');<br />
 	$this->cache->memcached->save('foo', 'bar', 10);</code>
 
-<p>For more information on Memcached, please see <a href="http://php.net/memcached">http://php.net/memcached</a></p>
+<p>想知道更多的 Memcached 資訊，請上 <a href="http://php.net/memcached">http://php.net/memcached</a></p>
 
 <h2 id="dummy">Dummy Cache</h2>
 
-<p>This is a caching backend that will always 'miss.'  It stores no data, but lets you keep your caching code in place in environments that don't support your chosen cache.</p>
+<p>這是快取的末端，它並不儲存快取資料，但是它能在你的 driver 不支援時，保有你的快取程式碼在系統環境中</p>
 
 </div>
 <!-- END CONTENT -->
