--- a/libraries/input.html
+++ b/libraries/input.html
@@ -79,14 +79,13 @@ Input 類別
 <li>將換行字元標準化成為 \n 。</li>
 </ul>
 
-<h2>跨網站 XSS 過慮</h2> 
- 
-<p>The Input class has the ability to filter input automatically to prevent cross-site scripting attacks.  If you want the filter to run automatically every time it encounters POST or COOKIE data you can enable it by opening your
- <kbd>application/config/config.php</kbd> file and setting this:</p>
+<h2>跨網站 XSS 過濾</h2> 
+
+<p>Input 類別可以自動過濾輸入值以避免 XSS 的攻擊，如果你想要在每次遇到 POST 或 COOKIE 的資料時就自動啟動，你可以到 <kbd>application/config/config.php</kbd> 設定:</p>
  
 <code>$config['global_xss_filtering'] = TRUE;</code> 
  
-<p>Please refer to the <a href="security.html">Security class</a> documentation for information on using XSS Filtering in your application.</p>
+<p>請參照 <a href="security.html">Security class</a> 的文件</p>
 
 <p class="important"><strong>注意：</strong>CI 2.0.0 將 $this->input->xss_clean() 轉換到 $this->security->xss_clean() 詳細請看 <a href="security.html">Security 類別</a></p>
 
@@ -128,9 +127,9 @@ else<br />
 
 <code>$this->input->post('some_data', TRUE);</code>
 
-<p>To return an array of all POST items call without any parameters.</p>
-<p>To return all POST items and pass them through the XSS filter leave the first parameter blank while setting the second parameter to boolean;</p>
-<p>The function returns FALSE (boolean) if there are no items in the POST.</p>
+<p>回傳 POST 陣列而不帶任何參數</p>
+<p>將第二個參數設為 TURE ，就可以回傳 POST 項目，並且經過 xss 的過濾</p>
+<p>假如 POST 沒有任何項目，則回傳 FALSE</p>
 
 <code>
 	$this->input->post(); // returns all POST items with XSS filter
@@ -144,9 +143,9 @@ else<br />
 
 <code>$this->input->get('some_data', TRUE);</code>
 
-<p>To return an array of all GET items call without any parameters.</p>
-<p>To return all GET items and pass them through the XSS filter leave the first parameter blank while setting the second parameter to boolean;</p>
-<p>The function returns FALSE (boolean) if there are no items in the GET.</p>
+<p>回傳 GET 陣列而不帶任何參數</p>
+<p>將第二個參數設為 TURE ，就可以回傳 GET 項目，並且經過 xss 的過濾</p>
+<p>假如 GET 沒有任何項目，則回傳 FALSE</p>
 
 <code>
 	$this->input->get(); // returns all GET items with XSS filter
@@ -174,12 +173,11 @@ else<br />
 
 <h2>$this->input->set_cookie()</h2>
 
-<p>Sets a cookie containing the values you specify.  There are two ways to pass information to this function so that a cookie can be set:
-Array Method, and Discrete Parameters:</p>
+<p>以下有二個方法可以將你指定的值設定到 cookie 中:</p>
 
-<h4>Array Method</h4>
+<h4>陣列</h4>
 
-<p>Using this method, an associative array is passed to the first parameter:</p>
+<p>使用關聯式陣列:</p>
 
 <code>$cookie = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;'name'&nbsp;&nbsp;&nbsp;=> 'The Cookie Name',<br />
@@ -194,33 +192,31 @@ Array Method, and Discrete Parameters:</p>
 $this->input->set_cookie($cookie);
 </code>
 
-<p><strong>Notes:</strong></p>
+<p><strong>注意:</strong></p>
 
-<p>Only the name and value are required. To delete a cookie set it with the expiration blank.</p>
+<p>只有名稱和值是必要的，如果要刪除 cookie 則將它設定過期即可</p>
 
-<p>The expiration is set in <strong>seconds</strong>, which will be added to the current time.  Do not include the time, but rather only the
-number of seconds from <em>now</em> that you wish the cookie to be valid.  If the expiration is set to
-zero the cookie will only last as long as the browser is open.</p>
-<p>For site-wide cookies regardless of how your site is requested, add your URL to the <strong>domain</strong> starting with a period, like this:  .your-domain.com</p>
-<p>The path is usually not needed since the function sets a root path.</p>
-<p>The prefix is only needed if you need to avoid name collisions with other identically named cookies for your server.</p>
-<p>The secure boolean is only needed if you want to make it a secure cookie by setting it to TRUE.</p>
+<p>過期的設定是以 <strong>秒</strong> 為單位,如果過期時間設為 0 則代表 cookie 只有在瀏覽器開啟的期間有效</p>
+<p>對於整個網站的 cookie，請加入 URL 到 'domain' 中，例如: .your-domain.com</p>
+<p>如果這個函數是設定在根目錄中，那則不需要設定 'path'</p>
+<p>如果你想避免名稱碰撞的問題，請加入前綴詞在 'prefix'</p>
+<p>如果你想使它成為 secure cookie，請將 'secure' 設定為 TRUE</p>
 
-<h4>Discrete Parameters</h4>
+<h4>個別參數</h4>
 
-<p>If you prefer, you can set the cookie by passing data using individual parameters:</p>
+<p>如果你願意，你可以透過個別參數的方式來設定 cookie:</p>
 
 <code>$this->input->set_cookie($name, $value, $expire, $domain, $path, $prefix, $secure);</code>
 
 <h2>$this->input->cookie()</h2>
 
-<p>Lets you fetch a cookie.  The first parameter will contain the name of the cookie you are looking for (including any prefixes):</p>
+<p>讓你取得 cookie，第一個參數為你想要找的 cookie 名稱(包含前綴詞):</p>
 
 <code>cookie('some_cookie');</code>
 
-<p>The function returns FALSE (boolean) if the item you are attempting to retrieve does not exist.</p>
+<p>如果找不到，則會回傳 FALSE</p>
 
-<p>The second optional parameter lets you run the data through the XSS filter.  It's enabled by setting the second parameter to boolean TRUE;</p>
+<p>第二個參數設定為 TRUE 可以讓你使用 xss 過濾</p>
 
 <p><code>cookie('some_cookie', TRUE);</code></p>
 
@@ -248,24 +244,24 @@ else<br />
 <p>返回當前使用者所使用的網頁瀏覽器, 如果沒有有效資訊則回傳 FALSE 。</p>
 <code>echo $this->input->user_agent();</code>
 
-<p>See the <a href="user_agent.html">User Agent Class</a> for methods which extract information from the user agent string.</p>
+<p>詳情請見 <a href="user_agent.html">User Agent Class</a></p>
 
 <h2>$this->input->request_headers()</h2> 
-<p>Useful if running in a non-Apache environment where <a href="http://php.net/apache_request_headers">apache_request_headers()</a> will not be supported.  Returns an array of headers.</p> 
+<p>在非 APACHE 的環境中， <a href="http://php.net/apache_request_headers">apache_request_headers()</a> 是無效的，因此本函式適用在非 APACHE 的環境中，回傳 header 的陣列</p> 
  
 <code>$headers = $this->input->request_headers();</code> 
- 
+
 <h2>$this->input->get_request_header();</h2> 
-<p>Returns a single member of the request headers array.</p> 
+<p>回傳 header 的陣列所指定的項目</p> 
  
 <code>$this->input->get_request_header('some-header', TRUE);</code> 
  
- 
+
 <h2>$this->input->is_ajax_request()</h2> 
-<p>Checks to see if the <var>HTTP_X_REQUESTED_WITH</var> server header has been set, and returns a boolean response.</p> 
+<p>檢查 <var>HTTP_X_REQUESTED_WITH</var> 是否設定，並且回傳布林值</p> 
 
 <h2>$this->input->is_cli_request()</h2>
-<p>Checks to see if the <var>STDIN</var> constant is set, which is a failsafe way to see if PHP is being run on the command line.</p>
+<p>檢查 <var>STDIN</var> 常數是否設定，它是一個安全容錯 (failsafe) 的方法來檢查 PHP 是否在命令列中執行</p>
 
 <code>$this->input->is_cli_request()</code>
 
