--- a/helpers/cookie_helper.html
+++ b/helpers/cookie_helper.html
@@ -63,10 +63,10 @@ Cookie 輔助函數
 
 <h2>載入輔助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>輔助函數使用下列方式載入：</p>
 <code>$this->load->helper('cookie');</code>
 
-<p>The following functions are available:</p>
+<p>可用函數如下所示：</p>
 
 <h2>set_cookie()</h2>
 
@@ -78,14 +78,14 @@ Cookie 輔助函數
 
 <h2>delete_cookie()</h2>
 
-<p>Lets you delete a cookie.  Unless you've set a custom path or other values，only the name of the cookie is needed:</p>
+<p>Lets you delete a cookie.  Unless you've set a custom path or other values, only the name of the cookie is needed:</p>
 
 <code>delete_cookie("name");</code>
 
-<p>This function is otherwise identical to <dfn>set_cookie()</dfn>，except that it does not have the value and expiration parameters.  You can submit an array
+<p>This function is otherwise identical to <dfn>set_cookie()</dfn>, except that it does not have the value and expiration parameters.  You can submit an array
 of values in the first parameter or you can set discrete parameters.</p>
 
-<code>delete_cookie($name，$domain，$path，$prefix)</code>
+<code>delete_cookie($name, $domain, $path, $prefix)</code>
 
 
 </div>
