--- a/helpers/cookie_helper.html
+++ b/helpers/cookie_helper.html
@@ -94,7 +94,7 @@ of values in the first parameter or you can set discrete parameters.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="compatibility_helper.html">Compatibility 輔助函數</a>
+上個主題:&nbsp;&nbsp;<a href="captcha_helper.html">CAPTCHA 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
