--- a/general/environments.html
+++ b/general/environments.html
@@ -99,7 +99,7 @@ define('<var>ENVIRONMENT</var>', '<var>development</var>');
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="managing_apps.html">管理 Applications<</a>
+上個主題:&nbsp;&nbsp;<a href="managing_apps.html">Application 管理</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
