--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -115,7 +115,7 @@ application/<samp>bar</samp>/views/</code>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="profiling.html">Application 效能分析</a>
+上個主題:&nbsp;&nbsp;<a href="cli.html">透過指令(CLI)執行</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
