--- a/general/profiling.html
+++ b/general/profiling.html
@@ -167,11 +167,11 @@ Application 效能分析
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="caching.html">Caching</a>
+上個主題:&nbsp;&nbsp;<a href="caching.html">快取 Caching</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="managing_apps.html">管理 Applications</a>
+下個主題:&nbsp;&nbsp;<a href="cli.html">透過指令(CLI)執行</a>
 </p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
