Change log for 2.1.0
Add

* New tutorial file
* Upgrade file: installation/upgrade_210.html
* New Library: migration Class

Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/toc.html
+++ b/toc.html
@@ -89,6 +89,14 @@
 	<li><a href="./overview/goals.html">架構目標</a></li>
 </ul>
 
+<h3>基礎教學 <span class="label warning">入門必看</span></h3>
+<ul>
+	<li><a href="./tutorial/index.html">基本簡介</a></li>
+	<li><a href="./tutorial/static_pages.html">靜態頁面</a></li>
+	<li><a href="./tutorial/news_section.html">新聞模組介紹</a></li>
+	<li><a href="./tutorial/create_news_items.html">動態新增新聞</a></li>
+	<li><a href="./tutorial/conclusion.html">結論</a></li>
+</ul>
 
 </td>
 <td valign="top" width="25%">
@@ -150,6 +158,7 @@
 <li><a href="./libraries/javascript.html">Javascript 類別</a></li>
 <li><a href="./libraries/loader.html">Loader 類別</a></li>
 <li><a href="./libraries/language.html">Language 類別</a></li>
+<li><a href="./libraries/migration.html">Migration 類別</a></li>
 <li><a href="./libraries/output.html">Output 類別</a></li>
 <li><a href="./libraries/pagination.html">Pagination 類別</a></li>
 <li><a href="./libraries/security.html">Security 類別</a></li>
