--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -99,6 +99,8 @@ else<br />
 <p>此函數可以防止插入空字元(NULL)到 ASCII 字元之間，就像 Java\0script.</p> 
 
 
+<h2>html_escape(<var>$mixed</var>)</h2>
+<p>This function provides short cut for htmlspecialchars() function. It accepts string and array. To prevent Cross Site Scripting (XSS), it is very useful.</p>
 
 </div>
 <!-- END CONTENT -->
