--- a/libraries/cart.html
+++ b/libraries/cart.html
@@ -109,6 +109,7 @@ $this->cart->insert($data);
  
 <p>針對商品額外資訊，建議你可以在所有商品中訂出一套規則，來讓你更容易的顯示商品資訊</p> 
  
+<p>The insert() method will return the $rowid if you successfully insert a single item.</p>
  
 <h2>在購物車中新增多項購物商品</h2> 
  
