--- a/general/cli.html
+++ b/general/cli.html
@@ -82,7 +82,7 @@
 
 <ul>
 	<li>透過 CLI 去執行您的 cron-jobs 而不需要使用 wget 或 curl</li>
-	<li>可以透過 <kbd>IS_CLI</kbd> 去判斷您的 cron-jobs，確保瀏覽器不能執行 cron-jobs 程式碼</li>
+	<li>可以透過 <kbd>$this->input->is_cli_request()</kbd> 去判斷瀏覽器是否可以執行 cron-jobs</li>
 	<li>互動式 "tasks" 工作，像是動態改變權限、清除 cache 目錄、執行備份…等。</li>
 	<li>可以利用其他語言整合其他相關應用，例如: 亂數 C++ 程式可以呼叫一個指令和在您的 Model 裡面執行程式!</li>
 </ul>
