--- a/overview/appflow.html
+++ b/overview/appflow.html
@@ -60,7 +60,7 @@
 
 <p>底下的圖形說明資料如何穿過 framework 的運作流程:</p>
 
-<div><img src="../images/appflowchart.gif" width="697" height="205" border="0" alt="CodeIgniter application flow" /></div>
+<div><img src="../images/appflowchart.gif" width="769" height="212" alt="CodeIgniter application flow"></div>
 
 
 <ol>
