Update: translate Tutorial
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/changelog.html
+++ b/changelog.html
@@ -1232,7 +1232,7 @@ Hg 標籤: 1.6.2</p>
 
 <ul>
 <li>新增<a href="./general/hooks.html">Hooks</a> feature, enabling you to tap into and modify the inner workings of the framework without hacking the core files.</li>
-<li>新增the ability to organize controller files <a href="./general/controllers.html">into sub-folders</a>.  Kudos to Marco for <a href="http://codeigniter.com/forums/viewthread/627/">suggesting</a> this (and the next two) feature.</li>
+<li>新增the ability to organize controller files <a href="./general/controllers.html">into sub-folders</a>.  Kudos to Marco for <a href="http://www.codeigniter.org.tw/forums/viewthread/627/">suggesting</a> this (and the next two) feature.</li>
 <li>新增regular expressions support for <a href="./general/routing.html">routing rules</a>.</li>
 <li>新增the ability to <a href="./general/controllers.html">remap function calls</a> within your controllers.</li>
 <li>新增the ability to <a href="./general/core_classes.html">replace core system classes</a> with your own classes.</li>
