--- a/installation/upgrade_173.html
+++ b/installation/upgrade_173.html
@@ -40,7 +40,7 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
+<a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
 升級版本 1.7.2 to 1.7.3
 </td>
