--- a/libraries/cart.html
+++ b/libraries/cart.html
@@ -30,7 +30,7 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%"> 
 <tr> 
 <td><h1>CodeIgniter 使用手冊版本 2.1.0</h1></td> 
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td> 
+<td id="breadcrumb_right"><a href="../toc.html">目錄</a></td> 
 </tr> 
 </table> 
 </div> 
