--- a/toc.html
+++ b/toc.html
@@ -89,7 +89,7 @@
 	<li><a href="./overview/goals.html">架構目標</a></li>
 </ul>
 
-<h3>基礎教學 <span class="label warning">入門必看</span></h3>
+<h3>指導手冊 <span class="label warning">入門必看</span></h3>
 <ul>
 	<li><a href="./tutorial/index.html">基本簡介</a></li>
 	<li><a href="./tutorial/static_pages.html">靜態頁面</a></li>
@@ -133,9 +133,9 @@
 <h3>更多資源</h3>
 
 <ul>
-<li><a href="http://www.codeigniter.org.tw/forum/">社群論壇(中文)</a></li>
-<li><a href="http://www.codeigniter.com/forums/">社群論壇(英)</a></li>
-<li><a href="http://www.codeigniter.com/wiki/">社群 wiki</a></li>
+<li><a href="http://codeigniter.org.tw/forum/">社群論壇(中文)</a></li>
+<li><a href="http://codeigniter.com/forums/">社群論壇(英)</a></li>
+<li><a href="http://codeigniter.com/wiki/">社群 wiki</a></li>
 </ul>
 
 </td>
