translate installation/upgrade_210.html completely
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrade_210.html
+++ b/installation/upgrade_210.html
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Upgrading from 2.0.3 to 2.1.0
+從 2.0.3 升級到 2.1.0
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,19 +55,19 @@ Upgrading from 2.0.3 to 2.1.0
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Upgrading from 2.0.3 to 2.1.0</h1>
+<h1>從 2.0.3 升級到 2.1.0</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟 1: 更新網站 CodeIgniter 檔案</h2>
 
-<p>Replace all files and directories in your "system" folder and replace your index.php file. If any modifications were made to your index.php they will need to be made fresh in this new one.</p>
+<p>更新 system 目錄底下的全部檔案及資料夾，取代根目錄 index.php 檔案。如果您有更動到 index.php，請麻煩用更新到新版 index.php。</p>
 
-<p class="important"><strong>Note:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 假如您有個人開發的檔案在這目錄底下，麻煩請先複製備份。</p>
 	
-<h2>Step 2: Replace config/user_agents.php</h2>
+<h2>步驟 2: 更新 config/user_agents.php</h2>
 
-<p>This config file has been updated to contain more user agent types, please copy it to <kbd>application/config/user_agents.php</kbd>.</p>
+<p>官方更新了許多 user agent 型態，麻煩覆蓋到 <kbd>application/config/user_agents.php</kbd>.</p>
 
 
 </div>
