--- a/installation/upgrade_203.html
+++ b/installation/upgrade_203.html
@@ -60,9 +60,9 @@
 <p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
 
 
-<h2>步驟 1: 更新您的 CodeIgniter 檔案</h2>
+<h2>步驟 1: 更新網站 CodeIgniter 檔案</h2>
 
-<p>更新 system 目錄底下的全部檔案及資料夾，取代根目錄 index.php 檔案。如果您有更動到 index.php，請麻煩用最新的取代它。</p>
+<p>更新 system 目錄底下的全部檔案及資料夾，取代根目錄 index.php 檔案。如果您有更動到 index.php，請麻煩用更新到新版 index.php。</p>
 
 <p class="important"><strong>注意:</strong> 假如您有個人開發的檔案在這目錄底下，麻煩請先複製備份。</p>
 
@@ -74,7 +74,7 @@
 
 <h2>步驟 3: 取代 config/user_agents.php</h2>
 
-<p>config 檔案已經更新相當多的 agent types，請複製檔案到 <kbd>application/config/user_agents.php</kbd>。</p>
+<p>官方更新了許多 user agent 型態，麻煩覆蓋到 <kbd>application/config/user_agents.php</kbd>.</p>
 
 <h2>步驟 4: 轉換 EXT constant 變數為 ".php"</h2>
 <p class="important"><strong>注意:</strong> EXT Constant 已經被標記為不讚成使用，但是系統尚未完全移除，我們鼓勵您儘快將 EXT 取代成 ".php"。</p>
