add upgrde from 2.1.0 to 2.1.1 UserGuide
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -60,6 +60,7 @@
 <p>請依您的版本詳閱更新注意事項。.</p>
 
 <ul>
+    <li><a href="upgrade_211.html">升級版本 2.1.0 到 2.1.1</a></li>
     <li><a href="upgrade_210.html">升級版本 2.0.3 到 2.1.0</a></li>
 	<li><a href="upgrade_203.html">升級版本 2.0.2 到 2.0.3</a></li>
     <li><a href="upgrade_202.html">升級版本 2.0.1 到 2.0.2</a></li>
