--- a/installation/upgrade_211.html
+++ b/installation/upgrade_211.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>從 2.0.3 升級到 2.1.0 : CodeIgniter 使用手冊</title>
+<title>從 2.1.0 升級到 2.1.1 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -28,7 +28,7 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter 使用手冊版本 2.1.0</h1></td>
+<td><h1>CodeIgniter 使用手冊版本 2.1.1</h1></td>
 <td id="breadcrumb_right"><a href="../toc.html">目錄</a></td>
 </tr>
 </table>
@@ -42,9 +42,9 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-從 2.0.3 升級到 2.1.0
+從 2.1.0 升級到 2.1.1
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>從 2.0.3 升級到 2.1.0</h1>
+<h1>從 2.1.0 升級到 2.1.1</h1>
 
 <p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
 
@@ -63,12 +63,17 @@
 
 <p>取代 system 目錄底下的全部檔案及及根目錄 index.php 檔案。假如您有更動到 index.php，請麻煩自行更新。</p>
 
-<p class="important"><strong>注意:</strong> 假如您有更動或開發在此目錄底下檔案，麻煩請先複製備份。</p>
+<p class="important"><strong>注意:</strong> 假如您有開發的檔案在此目錄底下，麻煩請先複製備份。</p>
 	
-<h2>步驟 2: 更新 config/user_agents.php</h2>
+<h2>步驟 2: 更新 config/mimes.php</h2>
 
-<p>官方更新了許多 user agent 型態，麻煩覆蓋到 <kbd>application/config/user_agents.php</kbd>.</p>
+<p>此設定檔已經更新許多 mime-types，請複製取代 <kbd>application/config/mimes.php</kbd> 檔案。</p>
 
+<h2>步驟 3: 更新您的 IP 列表:</h2>
+
+<p>此升級包含了支援 IPv6 位址。為了儲存 IPv6 列表，您必須修改 <var>ip_address</var> 欄位到 45 字元。舉例來說，CodeIgniter session 表格透過底下方式升級:</p>
+
+<code>ALTER TABLE ci_sessions CHANGE ip_address ip_address varchar(45) default '0' NOT NULL</code>
 
 </div>
 <!-- END CONTENT -->
@@ -82,7 +87,7 @@
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="troubleshooting.html">程式除錯</a>
 </p>
-<p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
+<p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2012 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
