--- a/changelog.html
+++ b/changelog.html
@@ -57,6 +57,43 @@
 
 <h1>版本紀錄</h1>
 
+<a name="2.1.1"></a>
+<h2>版本 2.1.1</h2>
+<p>發佈日期: June 12, 2012</p>
+
+<ul>
+    <li>一般變更 General Changes
+        <ul>
+            <li>Fixed support for docx, xlsx files in mimes.php.</li>
+        </ul>
+    </li>
+    <li>函式庫 Libraries
+        <ul>
+        <li>Further improved MIME type detection in the <a href="libraries/file_uploading.html">File Uploading Library</a>.</li>
+        <li>Added support for IPv6 to the <a href="libraries/input.html">Input Library</a>.</li>
+        <li>Added support for the IP format parameter to the <a href="libraries/form_validation.html">Form Validation Library</a>.</li>
+        </ul>
+    </li>
+    <li>補助函式 Helpers
+        <ul>
+            <li><samp>url_title()</samp> performance and output improved. You can now use any string as the word delimiter. Backwards compatible with 'dash' or 'underscore' as words delimiters.</li>
+        </ul>
+    </li>
+</ul>
+
+<h3>Bug fixes for 2.1.1</h3>
+<ul>
+    <li>Fixed a bug (#697) - A wrong array key was used in the Upload library to check for mime-types.</li>
+    <li>Fixed a bug - form_open() compared $action against site_url() instead of base_url()</li>
+    <li>Fixed a bug - CI_Upload::_file_mime_type() could've failed if mime_content_type() is used for the detection and returns FALSE.</li>
+    <li>Fixed a bug (#538) - Windows paths were ignored when using the <a href="libraries/image_lib.html">Image Manipulation Class</a> to create a new file.</li>
+    <li>Fixed a bug - When database caching was enabled, $this->db->query() checked the cache before binding variables which resulted in cached queries never being found.</li>
+    <li>Fixed a bug - CSRF cookie value was allowed to be any (non-empty) string before being written to the output, making code injection a risk.</li>
+    <li>Fixed a bug (#726) - PDO put a 'dbname' argument in it's connection string regardless of the database platform in use, which made it impossible to use SQLite.</li>
+    <li>Fixed a bug - CI_DB_pdo_result::num_rows() was not returning properly value with SELECT queries, cause it was relying on PDOStatement::rowCount().</li>
+    <li>Fixed a bug (#1059) - CI_Image_lib::clear() was not correctly clearing all necessary object properties, namely width and height.</li>
+</ul>
+
 <a name="2.1.0"></a>
 <h2>版本 2.1.0</h2>
 <p>發佈日期: November 14, 2011</p>
