update some word for upgrade guide
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrade_211.html
+++ b/installation/upgrade_211.html
@@ -63,8 +63,8 @@
 
 <p>取代 system 目錄底下的全部檔案及及根目錄 index.php 檔案。假如您有更動到 index.php，請麻煩自行更新。</p>
 
-<p class="important"><strong>注意:</strong> 假如您有開發的檔案在此目錄底下，麻煩請先複製備份。</p>
-	
+<p class="important"><strong>注意:</strong> 假如您有修改此目錄底下檔案，麻煩請先複製備份。</p>
+
 <h2>步驟 2: 更新 config/mimes.php</h2>
 
 <p>此設定檔已經更新許多 mime-types，請複製取代 <kbd>application/config/mimes.php</kbd> 檔案。</p>
