--- a/installation/upgrade_210.html
+++ b/installation/upgrade_210.html
@@ -63,7 +63,7 @@
 
 <p>取代 system 目錄底下的全部檔案及及根目錄 index.php 檔案。假如您有更動到 index.php，請麻煩自行更新。</p>
 
-<p class="important"><strong>注意:</strong> 假如您有更動或開發在此目錄底下檔案，麻煩請先複製備份。</p>
+<p class="important"><strong>注意:</strong> 假如您有修改此目錄底下檔案，麻煩請先複製備份。</p>
 	
 <h2>步驟 2: 更新 config/user_agents.php</h2>
 
