update helpers/url_helper.html libraries/sessions.html user guide to 2.1.1
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/helpers/url_helper.html
+++ b/helpers/url_helper.html
@@ -225,7 +225,7 @@ $url_title = url_title($title);<br />
 
 <code>$title = "What's wrong with CSS?";<br />
 <br />
-$url_title = url_title($title, 'underscore');<br />
+$url_title = url_title($title, '_');<br />
 <br />
 // Produces:  Whats_wrong_with_CSS
 </code>
@@ -234,7 +234,7 @@ $url_title = url_title($title, 'underscore');<br />
 
 <code>$title = "What's wrong with CSS?";<br />
 <br />
-$url_title = url_title($title, 'underscore',TRUE);<br />
+$url_title = url_title($title, '_',TRUE);<br />
 <br />
 // 處理:  whats_wrong_with_css
 </code>
