update change log for 2.1.2
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/changelog.html
+++ b/changelog.html
@@ -58,6 +58,18 @@
 <h1>版本紀錄</h1>
 
 <a name="2.1.1"></a>
+<h2>版本 2.1.2</h2>
+<p>發佈日期: June 29, 2012</p>
+
+<ul>
+    <li>一般變更
+		<ul>
+			<li>改善安全性函式 <kbd>xss_clean()</kbd>.</li>
+		</ul>
+	</li>
+</ul>
+
+<a name="2.1.1"></a>
 <h2>版本 2.1.1</h2>
 <p>發佈日期: June 12, 2012</p>
 
