--- a/installation/downloads.html
+++ b/installation/downloads.html
@@ -58,7 +58,8 @@
 <h1>下載 CodeIgniter</h1>
 
 <ul>
-    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.1.1">CodeIgniter V 2.1.1 (目前版本)</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.1.2">CodeIgniter V 2.1.2 (目前版本)</a></li>
+    <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.1.1">CodeIgniter V 2.1.1</a></li>
     <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.1.0">CodeIgniter V 2.1.0</a></li>
 	<li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.3">CodeIgniter V 2.0.3</a></li>
     <li><a href="http://www.codeigniter.org.tw/downloads/file/CodeIgniter_2.0.2">CodeIgniter V 2.0.2</a></li>
