--- a/helpers/array_helper.html
+++ b/helpers/array_helper.html
@@ -102,6 +102,8 @@ echo random_element($quotes);</code>
 
 <p>Lets you fetch a number of items from an array.  The function tests whether each of the array indices is set.  If an index does not exist
 it is set to FALSE, or whatever you've specified as the default value via the third parameter.  Example:</p>
+<p>讓你一次從陣列中取得數個元素。給定一個陣列，存放欲取得的陣列索引，此函式將檢查是否每個陣列索引都存在。
+若有不存在的索引，則將值設定為FALSE，或是設定為第三個參數指定的預設值。範例如下：</p>
 
 <code>
 $array = array(<br />
@@ -115,6 +117,7 @@ $my_shape = elements(array('color', 'shape', 'height'), $array);<br />
 </code>
 
 <p>The above will return the following array:</p>
+<p>以上程式將回傳下面的陣列：</p>
 
 <code>
 array(<br />
@@ -125,12 +128,14 @@ array(<br />
 </code>
 
 <p>You can set the third parameter to any default value you like:</p>
+<p>你可以由第三個參數設定預設值，當索引不存在時會套用預設值：</p>
 
 <code>
 $my_shape = elements(array('color', 'shape', 'height'), $array, NULL);<br />
 </code>
 
 <p>The above will return the following array:</p>
+<p>以上程式將回傳下面的陣列：</p>
 
 <code>
 array(<br />
@@ -142,6 +147,7 @@ array(<br />
 
 <p>This is useful when sending the <kbd>$_POST</kbd> array to one of your Models.  This prevents users from
 sending additional POST data to be entered into your tables:</p>
+<p>當你想要將<kbd>$_POST</kbd>陣列傳送給你的Model時，這將會很有用。它可以避免傳送多餘的POST資料給你的Model：</p>
 
 <code>
 $this->load->model('post_model');<br />
@@ -150,6 +156,7 @@ $this->post_model->update(elements(array('id', 'title', 'content'), $_POST));
 </code>
 
 <p>This ensures that only the id, title and content fields are sent to be updated.</p>
+<p>這可以確保僅有id，title及content的值會被送出並更新。</p>
 
 
 </div>
