translate general/libraries.html

--- a/general/libraries.html
+++ b/general/libraries.html
@@ -68,7 +68,10 @@
 
 <p>只要載入後，你就可以依照教學手冊的相關章節來使用它:</p>
 
+<!--
 <p>Additionally, multiple libraries can be loaded at the same time by passing an array of libraries to the load function.</p>
+-->
+<p>你還可以一次載入多個程式庫，只要傳入一個包含多個程式庫的陣列即可，例如下面這樣：</p>
 
 <code>$this->load->library(array('<var>email</var>', '<var>table</var>'));</code>
 
