translate general/common_functions.html

--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -100,7 +100,10 @@ else<br />
 
 
 <h2>html_escape(<var>$mixed</var>)</h2>
+<!--
 <p>This function provides short cut for htmlspecialchars() function. It accepts string and array. To prevent Cross Site Scripting (XSS), it is very useful.</p>
+-->
+<p>此函數提供一個捷徑來呼叫 htmlspecialchars() 函數。它允許傳入字串或陣列。這對於避免跨網站腳本攻擊（XSS）很有用處。</p>
 
 </div>
 <!-- END CONTENT -->
